samples/_failures_safe/1761130600_6478b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_420452da.c:164:1: error: expected ‘{’ at end of input
  164 | void free_graph(struct
      | ^~~~
